Added `GE-Proton` with experimental features These features are upcoming in 3.1.5

--- a/components.json
+++ b/components.json
@@ -5,6 +5,17 @@
             "title": "Wine-GE-Proton"
         },
         {
+            "name": "ge-proton",
+            "title": "GE-Proton",
+            "features": {
+            	"need_dxvk": false,
+            	"command": "python3 '%build%/proton' waitforexitandrun",
+            	"env": {
+            		"STEAM_COMPAT_DATA_PATH": "%prefix%"
+            	}
+            }
+        },
+        {
             "name": "soda",
             "title": "Soda"
         },
