Added `STEAM_COMPAT_CLIENT_INSTALL_PATH` to GE-Proton

--- a/components.json
+++ b/components.json
@@ -11,7 +11,8 @@
             	"need_dxvk": false,
             	"command": "python3 '%build%/proton' waitforexitandrun",
             	"env": {
-            		"STEAM_COMPAT_DATA_PATH": "%prefix%"
+            		"STEAM_COMPAT_DATA_PATH": "%prefix%",
+                    "STEAM_COMPAT_CLIENT_INSTALL_PATH": ""
             	}
             }
         },
