--- a/components.json
+++ b/components.json
@@ -8,10 +8,11 @@
             "name": "ge-proton",
             "title": "GE-Proton",
             "features": {
-            	"need_dxvk": false,
+                "need_dxvk": false,
+                "compact_launch": true,
             	"command": "python3 '%build%/proton' waitforexitandrun",
             	"env": {
-            		"STEAM_COMPAT_DATA_PATH": "%prefix%",
+                    "STEAM_COMPAT_DATA_PATH": "%prefix%",
                     "STEAM_COMPAT_CLIENT_INSTALL_PATH": "",
                     "SteamAppId": 0
             	}
