--- a/components.json
+++ b/components.json
@@ -11,6 +11,7 @@
                 "need_dxvk": false,
                 "compact_launch": true,
                 "command": "python3 '%build%/proton' waitforexitandrun",
+                "prefix_subdir": "pfx",
                 "env": {
                     "STEAM_COMPAT_DATA_PATH": "%prefix%",
                     "STEAM_COMPAT_CLIENT_INSTALL_PATH": "",
